--- a/Art.css
+++ b/Art.css
@@ -9,14 +9,9 @@
     padding-right: 60px;
 }
 .column {
-    float: left;
-    width: 50%;
-    padding: 30px;
-    height: 500px; 
+  flex: 50%;
   }
   
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+.row {
+    display: flex;
   }
